<resources>
    <string name="app_name">BaiTap5</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_.">.</string>
    <string name="btn_cong">+</string>
    <string name="btn_tru">-</string>
    <string name="btn_nhan">*</string>
    <string name="btn_chia">/</string>
    <string name="btn_bang">=</string>
</resources>