<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_bangtinh"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="bottom|right" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_bangtinh"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_ketqua"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="-1dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="294dp">

            <Button
                android:id="@+id/btn_7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:backgroundTint="#B37070"
                android:text="@string/btn_7"
                android:textColor="#A1887F"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/btn_8"
                android:textColor="#A1887F"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/btn_9"
                android:textColor="#A1887F"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_chia"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_chia"
                android:textColor="#A1887F"
                android:textStyle="bold" />


        </TableRow>
    </TableLayout>


</RelativeLayout>